--- a/library-project/package.json
+++ b/library-project/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "react": "^16.6.3",
@@ -10,6 +11,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-table": "^6.8.6",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
