--- a/library-project/package.json
+++ b/library-project/package.json
@@ -15,7 +15,7 @@
     "reactstrap": "^6.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
